--- a/wwr/index.html
+++ b/wwr/index.html
@@ -19,17 +19,17 @@
                     <a href="contactus.html">Contact Us</a>
                 </nav>
             </header>
-            <div id="hero">
-                <div id="hero-box">
-                    <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
-                </div>
-                <section id="hero-msg">
-                    <h1 class="home-title">Have an adventure</h1>
-                    <h4>Make memories with Dry Oar</h4>
-                    <div class="button-box">
-                        <a class="book" href="contactus.html">Book now</a>
-                    </div>
-                </section>
+           <div id="hero">
+              <div id="hero-box">
+                  <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+              </div>
+              <section id="hero-msg">
+                  <h1 class="home-title">Have An Adventure</h1>
+                  <h4>Make Memories with Dry Oar</h4>
+                  <div class="button-box">
+                      <a class="book" href="rates.html">Book Now</a>
+                  </div>
+              </section>
             </div>
             <main class="home-grid">
                 <section class="rivers-card">
@@ -47,9 +47,7 @@
                     <img class="icon" src="images/oars.png" alt="oars icon">
                     <h2>Rapids</h2>
                 </section>
-                <div id="background">
-
-                </div>
+                <div id="background"></div>
                 <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
                 <section class="msg">
                     <h2>More Than Just The Thrill</h2>
@@ -57,13 +55,13 @@
                     <a class='join' href="rivers.html">Join Us</a>
                 </section>
             </main>
-            <footer>
-                <p>Dry Oar &copy; 2025 - Michael Bigley</p>
+           <footer>
+                <p>Dry Oar © 2025 - Michael Bigley</p>
                 <p><a href="site-plan-rafting.html">Site Plan</a></p>
                 <p><a href="contactus.html">Contact Us</a></p>
                 <div class="social">
                     <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
+                        <img src="images/facebook.png" alt="fb icon">
                     </a>
                     <a href="https://twitter.com" target="_blank">
                         <img src="images/twitter.png" alt="twitter icon">
