--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -112,7 +112,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
-    <h3>[Page 2]</h3>
+    <h3>Company Blog</h3>
+
+    <img src="images/WWRBlogWireframe.png" alt="blog page wireframe"/>
 
     
   </main>
