--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -94,8 +94,8 @@
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
+      <div class="sm-blog">
+        Blog
         
       </div>
       <div class="sm-page3">Contact Us</div>
