--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -14,7 +14,7 @@
         </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="contact.html">Contact Me</a>
+            <a href="contactme.html">Contact Me</a>
             <a href="blog.html">Blog</a>
         </nav>
     </header>
