Created style.css for the personal-site index.html. made a few tweaks in grammar to index.html's content

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -28,7 +28,7 @@
 
         <section class="about">
             <h2>About Me</h2>
-            <p>I’m an amateur developer, computer science student, father, Eagle Scout and former missionary. This site is meant to be a personal portfolio that will grow as my skills do.</p>
+            <p>I’m an amateur developer, computer science student, Father, Eagle Scout and Former missionary. This site is meant to be a personal portfolio that will grow as my skills do.</p>
         </section>
 
         <section class="experience">
