Added a dropdown on hover element to my home page's navigation bar to additional future sub-pages

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -14,8 +14,21 @@
         </div>
         <nav>
             <a href="index.html">Home</a>
-            <a href="contactme.html">Contact Me</a>
-            <a href="blog.html">Blog</a>
+            <div class="dropdown">
+                <button class="dropbtn">Contact Me</button>
+                <div class="dropdown-content">
+                    <a href="contactme.html">Contact Form</a>
+                    <a href="#">Profile Card</a>
+                    <a href="#">LinkedIn</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">Blog</button>
+                <div class="dropdown-content">
+                    <a href="blog.html">All Posts</a>
+                    <a href="#">Cool Articles</a>
+                    <a href="#">Photo Gallery</a>
+                </div>
         </nav>
     </header>
 
