added a link and some CSS for the link to the site-plan to the main personal-site page

--- a/personalsite/index.html
+++ b/personalsite/index.html
@@ -60,6 +60,7 @@
 
     <footer>
         <p>&copy; 2025 Michael Bigley</p>
+        <p><a href="site-plan.html" class="footer-link">Site Plan</a></p>
     </footer>
 </body>
 </html>
