Structured, revised and updated the contact me subpage. added CSS to make it cleaner as well.

--- a/personalsite/contactme.html
+++ b/personalsite/contactme.html
@@ -35,40 +35,49 @@
     <main>
         <h1>Contact Me</h1>
         
-        <section class="contact-info">
-            <img src="images/Family.jpg" alt="Family photo" class="small-img">
+         <section class="contact-grid">
+            <div class="contact-text">
+            
+                <p>Thanks for visiting! Feel free to reach out using any of the methods below. I’m always open to discussing opportunities, collaborations, or just saying hello.</p>
 
-            <p>Thanks for visiting! Feel free to reach out using any of the methods below. I’m always open to discussing opportunities, collaborations, or just saying hello.</p>
-
-            <ul class="contact-list">
-                <li><strong>Email:</strong> mtbigley@gmail.com</li>
-                <li><strong>LinkedIn:</strong> to be made</li>
-                <li><strong>GitHub:</strong> github.com/mtbigley</li>
-            </ul>
+                <ul class="contact-list">
+                    <li><strong>Email:</strong> mtbigley@gmail.com</li>
+                    <li><strong>LinkedIn:</strong> to be made</li>
+                    <li><strong>GitHub:</strong> github.com/mtbigley</li>
+                </ul>
+            </div>
+            <div class="contact-image">
+                <img src="images/Family.jpg" alt="Family photo" class="contact-img">
+            </div>
         </section>
 
-        <section class="contact-form">
-            <h2>Send a Message</h2>
+        <section class="contact-grid">
+            <div class="contact-form-card">
+                <h2>Send a Message</h2>
 
-            <form>
-                <label>Name:</label>
-                <input type="text" required>
+                <form>
+                    <label>Name:</label>
+                    <input type="text" required>
 
-                <label>Email:</label>
-                <input type="email" required>
+                    <label>Email:</label>
+                    <input type="email" required>
 
-                <label>Message:</label>
-                <textarea rows="5" required></textarea>
+                    <label>Message:</label>
+                    <textarea rows="5" required></textarea>
 
-                <button type="submit">Send</button>
-            </form>
+                    <button type="submit">Send</button>
+                </form>
+            </div>
 
-            <img src="images/Smol_family.JPEG" alt="Small family photo" class="small-img">
+            <div class="contact-image">
+                <img src="images/Smol_family.JPEG" alt="Small family photo" class="contact-img">
+            </div>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 Michael Bigley</p>
+        <p><a href="site-plan.html" class="footer-link">Site Plan</a></p>
     </footer>
 </body>
 </html>
