Added CSS and tweaked html for blog page

--- a/personalsite/blog.html
+++ b/personalsite/blog.html
@@ -37,21 +37,29 @@
         <p>A space where I try (emphasis on try) to journal more consistently. Expect stories, thoughts, lessons learned, and the occasional proud new dad moment.</p>
 
         <section class="blog-post">
-            <h2>First Entry</h2>
-            <p>Welcome to the blog! I'm starting this as a way to reflect on life, family, my career path, and the things I'm learning.</p>
-            <img src="images/Ice_skating.jpg" alt="Ice skating">
+            <div class="blog-content">
+                <img src="images/Ice_skating.jpg" alt="Ice skating">
+                <div class="blog-text">
+                    <h2>First Entry</h2>
+                    <p>Welcome to the blog! I'm starting this as a way to reflect on life, family, my career path, and the things I'm learning.</p>
+                </div>
+            </div>
         </section>
 
         <section class="blog-post">
-            <h2>Trip to Oregon</h2>
-            <p>My family and I took a short trip up to Oregon — peaceful scenery, amazing gelato, and lots of fun memories.</p>
-            <img src="images/Oregon.JPEG" alt="Oregon scenery">
+            <div class="blog-content">
+                <img src="images/Oregon.JPEG" alt="Eating gelato with my family">
+                <div class="blog-text">
+                    <h2>Trip to Oregon</h2>
+                    <p>My family and I took a short trip up to Oregon — peaceful scenery, amazing gelato, and lots of fun memories.</p>
+                </div>
+            </div>
         </section>
-
     </main>
 
     <footer>
         <p>&copy; 2025 Michael Bigley</p>
+        <p><a href="site-plan.html" class="footer-link">Site Plan</a></p>
     </footer>
 </body>
 </html>
