uploaded content for a third (most recent) blog entry

--- a/personalsite/blog.html
+++ b/personalsite/blog.html
@@ -41,7 +41,9 @@
                 <img src="images/Ice_skating.jpg" alt="Ice skating">
                 <div class="blog-text">
                     <h2>First Entry</h2>
-                    <p>Welcome to the blog! I'm starting this as a way to reflect on life, family, my career path, and the things I'm learning.</p>
+                    <p>Welcome to the blog! I'm starting this as a way to reflect on life, family, my career path, and the things I'm learning. This website and especially this Blog will grow as I 
+                        take more photos, have more thoughts and acquire more skills.
+                    </p>
                 </div>
             </div>
         </section>
@@ -51,7 +53,22 @@
                 <img src="images/Oregon.JPEG" alt="Eating gelato with my family">
                 <div class="blog-text">
                     <h2>Trip to Oregon</h2>
-                    <p>My family and I took a short trip up to Oregon — peaceful scenery, amazing gelato, and lots of fun memories.</p>
+                    <p>My family and I took a short trip up to Oregon — peaceful scenery, amazing gelato, and lots of fun memories. The water was freezing but that didn't stop us from hopping waves
+                        and having a great time (especially little Leah; She's a really big fan of ice cream).
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <section class="blog-post">
+            <div class="blog-content">
+                <img src="images/Don_birthday.JPEG" alt="From right to left; Me, My wife Savannah, Leah, Jared and Teresa">
+                <div class="blog-text">
+                    <h2>Donald Wright's 90th Birthday</h2>
+                    <p>It's not every day someone in your family turns 90, so despite all the business of the season (holiday preparations, travel preparations and finals preparations can all combine to 
+                        fill up one's dance card really quick), Savannah and I made a day-trip down to Utah to Celebrate. A good time was had by all, and it was great seeing my family-in-law; especially 
+                        getting to meet a bunch of theretofore unfamiliar faces. 
+                    </p>
                 </div>
             </div>
         </section>
