Fix for broken image of Don Wright's Birthday party on blog page

--- a/personalsite/blog.html
+++ b/personalsite/blog.html
@@ -62,7 +62,7 @@
 
         <section class="blog-post">
             <div class="blog-content">
-                <img src="images/Don_birthday.JPEG" alt="From right to left; Me, My wife Savannah, Leah, Jared and Teresa">
+                <img src="images/Don_Birthday.JPEG" alt="From right to left; Me, My wife Savannah, Leah, Jared and Teresa">
                 <div class="blog-text">
                     <h2>Donald Wright's 90th Birthday</h2>
                     <p>It's not every day someone in your family turns 90, so despite all the business of the season (holiday preparations, travel preparations and finals preparations can all combine to 
